--- a/css/style.css
+++ b/css/style.css
@@ -831,10 +831,6 @@ strong{
 
 #hobbies-name{
   margin-top: 7px;
-  transform: rotate(-90deg);
-  position: relative;
-  left:50%;
-  top: 150px;
   display: none;
 }
 
@@ -1116,7 +1112,6 @@ color: #ffffff !important;
 }
 
 #projects-description{
-  margin-bottom: 15px;
   color: var(--color-1) !important;
 }
  #projects .draw-container{
@@ -1594,6 +1589,12 @@ padding: 0 !important;
   display: inline;
 }
 
+#hobbies-name{
+  transform: rotate(-90deg);
+  position: relative;
+  left:50%;
+  top: 150px;
+}
 
 #projects .text-box{
   width: 300px;
@@ -1691,7 +1692,7 @@ padding: 0 !important;
 }
 
 footer{
-  height: 200px;
+  height: 120px;
 }
 
 
@@ -1707,12 +1708,12 @@ footer{
 
 
   .projects-gallery:hover, .img-div:hover{ 
-    transform: scale(0.85);
+    transform: scale(0.78);
   }
   
 
   .projects-gallery{
-    transform: scale(0.8);
+    transform: scale(0.75);
   }
 
   .draw-container{
@@ -1741,6 +1742,10 @@ footer{
 @media screen and (max-height: 978px) and (max-width:1022px){
   .draw-container{
     display: none;
+  }
+
+  h2{
+    font-size: 33px !important;
   }
 
   #about p, .contact-info p,  .contact-info a{
