--- a/css/style.css
+++ b/css/style.css
@@ -468,10 +468,10 @@ section h2 {
   margin-left: 8%;
   font-size: 50px;
   text-align: center;
+  margin-bottom: 15px;
+  line-height: 3rem;
   font-weight: 500;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  padding-bottom: 10px;
+  padding: 5px;
   background: var(--linear-bg-1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -758,8 +758,8 @@ strong{
 }
 
 
-#skills h2{
- padding: 0;
+section>div h2{
+ padding: 2px !important;
 }
 
 #skills>div:nth-child(1){
@@ -786,8 +786,8 @@ strong{
 
 .container-skills .text-box{
   width: 150px !important;
-  max-height: 110px !important;
-  margin-bottom: 2vh;
+  margin: 0 !important;
+  background: #cbcaca44;
 
  
 }
@@ -1781,7 +1781,11 @@ footer{
 
   #skills .text-box{
     height: auto;
-    transform: scale(0.8);
+    transform: scale(0.9);
+  }
+
+  #about .text-box:hover, #education .text-box:hover, #skills .text-box:hover, #contact .text-box:hover{
+    transform: scale(0.95);
   }
 
   #projects .draw-container{
