--- a/css/style.css
+++ b/css/style.css
@@ -1746,7 +1746,7 @@ padding: 0 !important;
  
   .projects-gallery{
     margin-right: 20px ;
-    transform: scale(0.8);
+    transform: scale(0.95);
   }
 }
 
@@ -1920,5 +1920,27 @@ padding: 0 !important;
 
 
 
+
+}
+
+
+@media screen and (max-width: 872px) and (max-height: 630px){
+
+
+
+.menu, .menu ul{
+  width: auto;
+  background: none;
+  border: 0;
+}
+
+.menu a{
+  opacity: 0;
+}
+
+.menu .active{
+  opacity: 1;
+  border-radius: 8px;
+}
 
 }
